@@ -12,6 +12,8 @@
 - Fixed issue #10864: ezcConsoleTable calculates wrong column length for
   content including line breaks.
 - Fixed issue #10873: ezcConsoleArgument default value not working.
+- Fixed issue #10874: ezcConsoleArgument default value not contained in
+  generated help text.
 
 
 1.3beta1 - Monday 07 May 2007
